<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="731dp"
    android:orientation="vertical"
    android:background="@drawable/texture"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:text="Sing Up"
        android:textColor="@color/colorPink"
        android:textSize="50dp"
        >
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Full name"
            android:textSize="20dp"
            android:textColor="@color/colorLightPink"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textSize="20dp"
            android:selectAllOnFocus="true"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textSize="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
        />
        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/sign"
            android:textSize="20dp"
            android:textColor="#fff"
            android:background="@color/colorOrange">
        </Button>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="OR"
            android:textSize="30dp"
            >
        </TextView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/facebook"
            android:layout_marginBottom="10dp"
            android:textSize="20dp"
            android:textColor="#fff"
            android:background="@color/colorDarkBlue">
        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/twitter"
            android:layout_marginBottom="10dp"
            android:textSize="20dp"
            android:textColor="#fff"
            android:background="@color/colorLightBlue">
        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/google"
            android:textSize="20dp"
            android:textColor="#fff"
            android:background="@color/colorTomato">
        </Button>

    </LinearLayout>

</LinearLayout>